unpackaged/main/default/objects/EBH_Deal__c/EBH_Deal__c.object-meta.xml
<CustomObject>
    <description>[EBH] (EPH-3291) - Deal</description>
    <label>Deal</label>
    <nameField>
        <displayFormat>DN-{0000000000}</displayFormat>
        <label>WoW Deal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>