unpackaged/main/default/objects/EBH_Deal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>US-0008225</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; EBH_BusinessName__r.ParentId , EBH_BusinessName__r.Parent.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>