unpackaged/main/default/objects/EBH_Deal__c/fields/Additional_Terms_Override_Of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Override_Of_Agreement__c</fullName>
    <description>US-0006971 [AU] Deals Accept - Send Deals Accept with/without Subsidy Template to AU Sellers</description>
    <label>Additional Terms Override Of Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>