unpackaged/main/default/objects/EBH_Deal__c/fields/AdjustedSoldItems__c.field-meta.xml
<CustomField>
    <fullName>AdjustedSoldItems__c</fullName>
    <description>US-0010371</description>
    <label>Adjusted Sold Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>