unpackaged/main/default/objects/EBH_Deal__c/fields/Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Date__c</fullName>
    <description>US-0010019 - [NA] Subsidized Deals Contract Amendment Process</description>
    <label>Amendment Date</label>
    <type>DateTime</type>
</CustomField>