unpackaged/main/default/objects/EBH_Deal__c/fields/AmountAlreadyPaid__c.field-meta.xml
<CustomField>
    <fullName>AmountAlreadyPaid__c</fullName>
    <label>Amount already paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>