unpackaged/main/default/objects/EBH_Deal__c/fields/ASP_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>ASP_Last_30_Days__c</fullName>
    <description>US-0009618</description>
    <formula>(GMV_Last_30_Days_DWH__c / Sold_Items_Last_30_Days_DWH__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASP Last 30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>