unpackaged/main/default/objects/EBH_Deal__c/fields/BillingStatus__c.field-meta.xml
<CustomField>
    <fullName>BillingStatus__c</fullName>
    <description>EPH-5286</description>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None (No Coinvest)</fullName>
            </value>
            <value>
                <fullName>Partly paid</fullName>
            </value>
            <value>
                <fullName>Fully paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>