unpackaged/main/default/objects/EBH_Deal__c/fields/BILOPS_Nr__c.field-meta.xml
<CustomField>
    <fullName>BILOPS_Nr__c</fullName>
    <description>EPH-7280 BILOPS Nr.</description>
    <label>BILOPS Nr.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>