unpackaged/main/default/objects/EBH_Deal__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>US-0010296</description>
    <label>Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>