unpackaged/main/default/objects/EBH_Deal__c/fields/Can_ReAdjust__c.field-meta.xml
<CustomField>
    <fullName>Can_ReAdjust__c</fullName>
    <description>US-0011032 - Edit Deal Option for Sellers to adjust pricing on Submitted Deals
US-0011668</description>
    <formula>IF(AND(ISPICKVAL(EBH_DealSiteId__c ,&#39;0&#39;),ISPICKVAL(Seller_Portal_Status__c ,&#39;Editable&#39;),RecordType.DeveloperName = &#39;Deal_V3&#39;),TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can ReAdjust</label>
    <type>Checkbox</type>
</CustomField>