unpackaged/main/default/objects/EBH_Deal__c/fields/Can_ReSubmit__c.field-meta.xml
<CustomField>
    <fullName>Can_ReSubmit__c</fullName>
    <description>v2:US-0010560 - [SP - EU Deals] Allow sellers to edit specific deal fields post deal rejection</description>
    <formula>IF(AND(ISPICKVAL(EBH_DealSiteId__c , &#39;77&#39;),ISPICKVAL(EBH_Status__c,&#39;Rejected&#39;),ISPICKVAL(EBH_BusinessName__r.SP_Deals__c,&#39;Full Access&#39;)), 
 CONTAINS(&#39;Preis zu hoch, Fehlende oder falsche Angaben, Angebotene Menge zu gering, Abverkaufspotenzial zu gering, Schlechte Bildqualität, Falsche Kategorie&#39;, TEXT(EBH_ReasonforRejection__c)) 
, FALSE   )</formula>
    <label>Can Re-Submit</label>
    <type>Checkbox</type>
</CustomField>