unpackaged/main/default/objects/EBH_Deal__c/fields/Cancellation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Time__c</fullName>
    <description>US-0008225</description>
    <label>Cancellation Date/Time</label>
    <type>DateTime</type>
</CustomField>