unpackaged/main/default/objects/EBH_Deal__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>US-0008225</description>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>