unpackaged/main/default/objects/EBH_Deal__c/fields/Cancelled_Deal__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008225</description>
    <label>Cancelled Deal</label>
    <type>Checkbox</type>
</CustomField>