unpackaged/main/default/objects/EBH_Deal__c/fields/Check_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Check_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-6986 Deals - Reminder email to agree on planned deal</description>
    <label>Check Reminder</label>
    <type>Checkbox</type>
</CustomField>