unpackaged/main/default/objects/EBH_Deal__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>[#EPH-7402] New Invoice fields for Object_ Deals</description>
    <formula>EBH_BusinessName__r.EBH_BillingCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>