unpackaged/main/default/objects/EBH_Deal__c/fields/CoinvestPoNumber__c.field-meta.xml
<CustomField>
    <fullName>CoinvestPoNumber__c</fullName>
    <description>EPH-5286</description>
    <label>PO Number for Coinvest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>