unpackaged/main/default/objects/EBH_Deal__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>[#EPH-7402] New Invoice fields for Object_ Deals</description>
    <formula>EBH_BusinessName__r.EBH_CompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>