unpackaged/main/default/objects/EBH_Deal__c/fields/Current_Digest__c.field-meta.xml
<CustomField>
    <fullName>Current_Digest__c</fullName>
    <description>US-0008102 : [US]* Deals Mass Submission for External Seller Approval Process</description>
    <formula>SUBSTITUTE(Deal_Contract_Agreement__r.Current_Digest__c, &#39;+&#39;, &#39;%2B&#39;)</formula>
    <label>Current Digest</label>
    <type>Text</type>
</CustomField>