unpackaged/main/default/objects/EBH_Deal__c/fields/Current_Seller_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Seller_Price__c</fullName>
    <description>US-0007055 AU and EU] API Call to auto populate &quot;Current seller price&quot; in Deal</description>
    <inlineHelpText>Item price on eBay local site. Captured as one time snapshot on deal creation in HIVE.</inlineHelpText>
    <label>Current Seller Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>