unpackaged/main/default/objects/EBH_Deal__c/fields/Date_LastCheck__c.field-meta.xml
<CustomField>
    <fullName>Date_LastCheck__c</fullName>
    <description>EPH-6986 Deals - Reminder email to agree on planned deal</description>
    <label>Date LastCheck</label>
    <type>DateTime</type>
</CustomField>