unpackaged/main/default/objects/EBH_Deal__c/fields/DateAcceptSend__c.field-meta.xml
<CustomField>
    <fullName>DateAcceptSend__c</fullName>
    <description>US-0006971 [AU] Deals Accept - Send Deals Accept with/without Subsidy Template to AU Sellers</description>
    <label>DateAcceptSend</label>
    <type>DateTime</type>
</CustomField>