unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contract_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || CODE - N || WF - N || AP - N || VAL - N || CLASS – (Internal) || Daily Deals - Deal Configuration || CR - 00201509
US-0008178 : [US]* Deals Mass Cancellation Process for Deals Managers</description>
    <label>Deal Contract Agreement</label>
    <referenceTo>Deal_Contract_Agreement__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>