unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Contract_Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contract_Seller_Name__c</fullName>
    <description>US-0008102 : [US]* Deals Mass Submission for External Seller Approval Process</description>
    <formula>Deal_Contract_Agreement__r.Seller_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Contract Seller Name</label>
    <type>Text</type>
</CustomField>