unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deal_End_Date_Time__c</fullName>
    <description>US-0008225</description>
    <formula>TEXT(YEAR(EBH_DealEndDate__c)) + &quot;-&quot; +
LPAD(TEXT(MONTH(EBH_DealEndDate__c)), 2, &quot;0&quot;) + &quot;-&quot; +
LPAD(TEXT(DAY(EBH_DealEndDate__c)), 2, &quot;0&quot;) + &quot; &quot; + IF(LEN(TEXT(HOUR(EBH_DealEndTime__c))) = 1, &quot;0&quot;+TEXT(HOUR(EBH_DealEndTime__c)), TEXT(HOUR(EBH_DealEndTime__c))) + &quot;:&quot; + IF(LEN(TEXT(MINUTE(EBH_DealEndTime__c))) = 1, &quot;0&quot;+TEXT(MINUTE(EBH_DealEndTime__c)), TEXT(MINUTE(EBH_DealEndTime__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal End Date/Time</label>
    <type>Text</type>
</CustomField>