unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_End_Date_w_time__c.field-meta.xml
<CustomField>
    <fullName>Deal_End_Date_w_time__c</fullName>
    <description>US-0010920 - Unable to export weekly submissions/selections</description>
    <formula>IF(
ISBLANK(EBH_DealEndDate__c) 
,null,
TEXT(YEAR(EBH_DealEndDate__c))+&quot;-&quot;+TEXT(MONTH(EBH_DealEndDate__c))+&quot;-&quot;+TEXT(DAY(EBH_DealEndDate__c))+&quot;  07:59&quot;
)</formula>
    <label>Deal End Date</label>
    <type>Text</type>
</CustomField>