unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Price_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Deal_Price_List_Price__c</fullName>
    <description>US-0009872</description>
    <formula>TEXT(EBH_DealPrice__c) + &#39; | &#39; + TEXT(EBH_RRPWASPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Price | List Price</label>
    <type>Text</type>
</CustomField>