unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Price_Seller_Portal__c.field-meta.xml
<CustomField>
    <fullName>Deal_Price_Seller_Portal__c</fullName>
    <formula>EBH_DealPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price seller has submitted as their offer price for the deal</inlineHelpText>
    <label>Deal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>