unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Revised__c.field-meta.xml
<CustomField>
    <fullName>Deal_Revised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008225</description>
    <label>Deal Revised</label>
    <type>Checkbox</type>
</CustomField>