unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Start_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Deal_Start_Date_1__c</fullName>
    <description>US-0011309 - Missing Item-ID: To-Do list and List Views - AC1 for query with criteria Today &lt; Deal Start Date -1 in DE SEP&#39;s list view.</description>
    <formula>EBH_DealStartDate__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Start Date - 1</label>
    <type>Date</type>
</CustomField>