unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Start_Date_Time2__c.field-meta.xml
<CustomField>
    <fullName>Deal_Start_Date_Time2__c</fullName>
    <description>NA Deals: Update Deals to &#39;Expired&#39; status when expired</description>
    <label>Deal Start Date/Time2</label>
    <type>DateTime</type>
</CustomField>