unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Start_Date_w_time__c.field-meta.xml
<CustomField>
    <fullName>Deal_Start_Date_w_time__c</fullName>
    <description>US-0010920 - Unable to export weekly submissions/selections</description>
    <formula>IF( 
ISBLANK(EBH_DealStartDate__c), 
null,
TEXT(YEAR(EBH_DealStartDate__c))+&quot;-&quot;+TEXT(MONTH(EBH_DealStartDate__c))+&quot;-&quot;+TEXT(DAY(EBH_DealStartDate__c))+&quot;  08:00&quot;
)</formula>
    <label>Deal Start Date</label>
    <type>Text</type>
</CustomField>