unpackaged/main/default/objects/EBH_Deal__c/fields/Deal_Statement__c.field-meta.xml
<CustomField>
    <fullName>Deal_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008846 - [NA] Migrate JOIN NA Deals Trigger and related Classes to Hive</description>
    <label>Deal Statement</label>
    <referenceTo>Deal_Statement__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>