unpackaged/main/default/objects/EBH_Deal__c/fields/DealPicture__c.field-meta.xml
<CustomField>
    <fullName>DealPicture__c</fullName>
    <formula>if( ISBLANK(PictureURL__c),&quot;&quot;,IMAGE( PictureURL__c , &#39;URL&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealPicture</label>
    <type>Text</type>
</CustomField>