unpackaged/main/default/objects/EBH_Deal__c/fields/DealV2_SellerRejected_DateTime__c.field-meta.xml
<CustomField>
    <fullName>DealV2_SellerRejected_DateTime__c</fullName>
    <description>US-0010597 - Move Time-Base Deal Process Builder to Time-Base Deal Flow</description>
    <label>DealV2 SellerRejected DateTime</label>
    <type>DateTime</type>
</CustomField>