unpackaged/main/default/objects/EBH_Deal__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008086</description>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals1</relationshipName>
    <type>Lookup</type>
</CustomField>