unpackaged/main/default/objects/EBH_Deal__c/fields/Discount_p__c.field-meta.xml
<CustomField>
    <fullName>Discount_p__c</fullName>
    <description>US-0007055 AU and EU] API Call to auto populate &quot;Current seller price&quot; in Deal</description>
    <formula>( Current_Seller_Price__c  -  EBH_DealPrice__c  ) / Current_Seller_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the % discount from Current eBay seller Price to the Deal Price</inlineHelpText>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>