unpackaged/main/default/objects/EBH_Deal__c/fields/Dispute_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Approval_Comments__c</fullName>
    <description>US-0008225</description>
    <label>Dispute Approval Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>