unpackaged/main/default/objects/EBH_Deal__c/fields/Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Status__c</fullName>
    <description>US-0008225</description>
    <label>Dispute Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In Dispute</fullName>
            </value>
            <value>
                <fullName>Completed - Action Taken</fullName>
            </value>
            <value>
                <fullName>Completed - No Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>