unpackaged/main/default/objects/EBH_Deal__c/fields/Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Type__c</fullName>
    <description>US-0008225</description>
    <label>Dispute Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity Variance</fullName>
            </value>
            <value>
                <fullName>Subsidy Per Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>