unpackaged/main/default/objects/EBH_Deal__c/fields/eBay_Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>eBay_Seller_Name__c</fullName>
    <description>US-0008225</description>
    <formula>EBH_BusinessName__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eBay Seller Name</label>
    <type>Text</type>
</CustomField>