unpackaged/main/default/objects/EBH_Deal__c/fields/eBayReviewComments__c.field-meta.xml
<CustomField>
    <fullName>eBayReviewComments__c</fullName>
    <description>US-0011117</description>
    <label>eBay Review Comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>Maximum quantity to list. No adjustment.</fullName>
            </value>
            <value>
                <fullName>Maximum quantity to list. Revised.</fullName>
            </value>
            <value>
                <fullName>Payment reflected in the initial statement. No adjustment.</fullName>
            </value>
            <value>
                <fullName>No sales data for this listing ID during this period. No adjustment.</fullName>
            </value>
            <value>
                <fullName>Additional quantity is outside of subsidy window, unpaid items, cancellations and/or returns. No adjustment.</fullName>
            </value>
            <value>
                <fullName>Additional quantity is outside of subsidy window, unpaid items, cancellations and/or returns. Revised.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>