unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_AmazonLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_AmazonLink__c</fullName>
    <description>[EBH] (EPH-4527) - Amazon Link</description>
    <label>Amazon Link</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>