unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_BusinessName__c.field-meta.xml
<CustomField>
    <fullName>EBH_BusinessName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[EBH] (EPH-4163) - Business Name</description>
    <label>eBay Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>EBH_BusinessName</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>