unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Category__c.field-meta.xml
<CustomField>
    <fullName>EBH_Category__c</fullName>
    <description>[EBH] (EPH-4163) - Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_DealSiteId__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DVDs, Films &amp; TV</fullName>
            </value>
            <value>
                <fullName>Antiquitäten &amp; Kunst</fullName>
            </value>
            <value>
                <fullName>Auto &amp; Motorrad: Fahrzeuge</fullName>
            </value>
            <value>
                <fullName>Auto &amp; Motorrad: Teile</fullName>
            </value>
            <value>
                <fullName>Bastel- &amp; Künstlerbedarf</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Gesundheit</fullName>
            </value>
            <value>
                <fullName>Briefmarken</fullName>
            </value>
            <value>
                <fullName>Bücher</fullName>
            </value>
            <value>
                <fullName>Büro &amp; Schreibwaren</fullName>
            </value>
            <value>
                <fullName>Business &amp; Industrie</fullName>
            </value>
            <value>
                <fullName>Computer, Tablets &amp; Netzwerk</fullName>
            </value>
            <value>
                <fullName>Feinschmecker</fullName>
            </value>
            <value>
                <fullName>Filme &amp; DVDs</fullName>
            </value>
            <value>
                <fullName>Foto &amp; Camcorder</fullName>
            </value>
            <value>
                <fullName>Garten</fullName>
            </value>
            <value>
                <fullName>Garten &amp; Terrasse</fullName>
            </value>
            <value>
                <fullName>Handys &amp; Kommunikation</fullName>
            </value>
            <value>
                <fullName>Haushaltsgeräte</fullName>
            </value>
            <value>
                <fullName>Haustierbedarf</fullName>
            </value>
            <value>
                <fullName>Heimwerker</fullName>
            </value>
            <value>
                <fullName>Immobilien</fullName>
            </value>
            <value>
                <fullName>Kleidung &amp; Accessoires</fullName>
            </value>
            <value>
                <fullName>Möbel &amp; Wohnen</fullName>
            </value>
            <value>
                <fullName>Modellbau</fullName>
            </value>
            <value>
                <fullName>Münzen</fullName>
            </value>
            <value>
                <fullName>Musik</fullName>
            </value>
            <value>
                <fullName>Musikinstrumente</fullName>
            </value>
            <value>
                <fullName>PC- &amp; Videospiele</fullName>
            </value>
            <value>
                <fullName>Reisen</fullName>
            </value>
            <value>
                <fullName>Sammeln &amp; Seltenes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>