unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_CoinvestLC__c.field-meta.xml
<CustomField>
    <fullName>EBH_CoinvestLC__c</fullName>
    <label>Coinvest (Local Currency)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>