unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_CoinvestUSD__c.field-meta.xml
<CustomField>
    <fullName>EBH_CoinvestUSD__c</fullName>
    <label>Coinvest (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>