unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_CommentfromeBaySourcer__c.field-meta.xml
<CustomField>
    <fullName>EBH_CommentfromeBaySourcer__c</fullName>
    <description>[EBH] (EPH-4163) - Comment from eBay / Sourcer</description>
    <label>Comment from eBay / Sourcer</label>
    <length>299</length>
    <type>LongTextArea</type>
</CustomField>