unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_CommentfromSeller__c.field-meta.xml
<CustomField>
    <fullName>EBH_CommentfromSeller__c</fullName>
    <description>[EBH] (EPH-4163) - Comment from Seller</description>
    <label>Comment from Seller</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>