unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealCalendarDescription__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealCalendarDescription__c</fullName>
    <description>[EBH] (EPH-) - Deal Calendar Description</description>
    <formula>EBH_ProductTitle__c &amp; &quot; | &quot; &amp;  EBH_BusinessName__c  &amp; &quot; | &quot; &amp; TEXT( EBH_DealPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Calendar Description</label>
    <type>Text</type>
</CustomField>