unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Dealdateearliestpossible__c.field-meta.xml
<CustomField>
    <fullName>EBH_Dealdateearliestpossible__c</fullName>
    <description>EBH_Dealdate (earliest possible)</description>
    <label>Dealdate (earliest possible)</label>
    <type>Date</type>
</CustomField>