unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealEndDate__c</fullName>
    <description>[EBH] (EPH-4163) - Deal End Date</description>
    <label>Deal End Date</label>
    <type>Date</type>
</CustomField>