unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealEndTime__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealEndTime__c</fullName>
    <defaultValue>TIMEVALUE(&quot;10:00:00.000&quot;)</defaultValue>
    <description>EPH-5169 Adding Deal start and End Time fields</description>
    <label>Deal End Time</label>
    <type>Time</type>
</CustomField>