unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealPrice__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealPrice__c</fullName>
    <description>[EBH] (EPH-4163) - Deal Price</description>
    <inlineHelpText>Price of deal, including any eBay subsidy. If no eBay subsidy is applied, Deal Price and Seller Price are same amount</inlineHelpText>
    <label>Deal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>