unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealRetailCampaign__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealRetailCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-5546 Relationship between Deal and Deal Retail Campaign objects</description>
    <label>Deal Retail Campaign</label>
    <referenceTo>EBH_DealRetailCampaign__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>