unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealSiteId__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealSiteId__c</fullName>
    <description>[EBH] (EPH-5193) - Deal Site ID</description>
    <label>Deal Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>77</fullName>
                <label>DE</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>FR</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>IT</label>
            </value>
            <value>
                <fullName>186</fullName>
                <label>ES</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>AU</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>US</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>