unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealSlotAllocation__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealSlotAllocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-) - Deal Slot Allocation</description>
    <label>Deal Slot Allocation</label>
    <referenceTo>EBH_DealSlotAllocation__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>EBH_DealSlotAllocation</relationshipName>
    <type>Lookup</type>
</CustomField>