unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealStartDate__c</fullName>
    <description>[EBH] (EPH-4163) - Deal Start Date</description>
    <label>Deal Start Date</label>
    <type>Date</type>
</CustomField>