unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealStartTime__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealStartTime__c</fullName>
    <defaultValue>TIMEVALUE(&quot;00:00:00.000&quot;)</defaultValue>
    <description>EPH-5169 Adding Deal start and End Time fields</description>
    <label>Deal Start Time</label>
    <type>Time</type>
</CustomField>