unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_DealTrackingEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealTrackingEndDate__c</fullName>
    <description>Used to define how long a deal performance data should be tracked after the deal end date.</description>
    <label>Deal Tracking End Date</label>
    <type>Date</type>
</CustomField>