unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Don_t_send_email_to_sellers__c.field-meta.xml
<CustomField>
    <fullName>EBH_Don_t_send_email_to_sellers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this field is marked, the system will not send an email when the deal is rejected</description>
    <label>Don&#39;t send email to sellers</label>
    <type>Checkbox</type>
</CustomField>